--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
 @import 'tailwindcss/dist/base.css';
 @import 'tailwindcss/dist/components.css';
 @import 'tailwindcss/dist/utilities.css';
+
+
+.app__container{
+    /* width: 80%; */
+    margin: 30px auto;
+}
+.controls{
+    margin-bottom: 20px;
+}
+.img__container{
+    column-count: 3;
+    column-gap: 1em;
+}
+
+.img-random{
+    display: inline-block;
+    margin: 0 auto 1em;
+    width: 100%;
+    border-radius: 15px;
+}
+
+.img-random:hover{
+    /* filter: blur(2px); */
+    filter: saturate(.7);
+}
+
+#accountant, .title{
+    color: Coral;
+}
+.usr{
+    color: #64C9CF;
+}
