--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,16 @@
     /* filter: blur(2px); */
     filter: saturate(.7);
 }
+.loading{
+    width: 100%;
+    height: 100%;
+    /* background-color: #a7b4b4; */
+    background-color: red;
+    padding: .5em;
+}
 
-#accountant, .title{
+
+.accountant, .title{
     color: Coral;
 }
 .usr{
@@ -36,7 +44,7 @@
 
 @media (min-width: 500px) {
     .img__container{
-        column-count: 1;
+        column-count: 3;
         column-gap: 1em;
     }
 }
